--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html canvas.html base.html --open"
+    "start": "parcel index.html canvas.html base.html new.html --open"
   },
   "repository": {
     "type": "git",
