--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "canvas",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html canvas.html base.html new.html --open"
+    "start": "parcel index.html canvas.html base.html new.html --open",
+    "tasks": "nodemon tasks.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Shperung/canvas#readme",
   "dependencies": {
+    "nodemon": "^3.0.1",
     "parcel-bundler": "^1.12.4"
-  }
+  },
+  "description": ""
 }
